...
  const RouteCard({
    super.key,
    required this.route,
    required this.onTap,
    this.onLongPress,
    this.onAction,
    this.actionLabel = 'Näytä reitti',
    this.isSelected = false,
  });

  @override
  Widget build(BuildContext context) {
    final isFav = context.select<AppState, bool>(
...
